# AskSamuel

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
src/: audio.py  ocr.py  settings.py  utils.py
tests/: test_utils.py
